FCS-423: Hide empty file summaries for additional information (#251)